@@ -409,6 +409,8 @@ namespace kt
 		queue_pause_action = new KToggleAction(KIcon("kt-pause"),i18n("Pause KTorrent"),this);
 		queue_pause_action->setToolTip(i18n("Pause all running torrents"));
 		queue_pause_action->setShortcut(KShortcut(Qt::SHIFT + Qt::Key_P));
+		queue_pause_action->setObjectName("ktorrent-queue-pause-action");
+		queue_pause_action->setGlobalShortcut(KShortcut(Qt::ALT + Qt::SHIFT + Qt::Key_P));
 		connect(queue_pause_action,SIGNAL(toggled(bool)),this,SLOT(pauseQueue(bool)));
 		queue_pause_action->setCheckedState(KGuiItem(i18n("Resume KTorrent"),"media-playback-start",
 											i18n("Resume paused torrents")));
